@@ -23,6 +23,7 @@
     context structures. */
 
 #include <string.h>		/* for strcmp */
+#include "config.h"
 #include "decContext.h"		/* context and base types */
 #include "decNumberLocal.h"	/* decNumber local types, etc. */
 
